--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>Kashish Srivastava | Portfolio</title>
 </head>
 <body>
 
     <header>
-        <h1><i>Kashish Srivastava</i></h1>
+        <h1>Kashish Srivastava</h1>
         <nav>
             <a href="index.html">Home</a>
             |
@@ -19,9 +20,9 @@
 
         <section>
             <p>
-                <b>Hi, I’m Kashish — a Computer Science student who loves learning new technologies
+                <i><b>Hi, I’m Kashish — a Computer Science student who loves learning new technologies
                 and building meaningful projects. I enjoy problem-solving and continuously
-                improving my technical skills.</b>
+                improving my technical skills.</b></i>
             </p>
         </section>
 
@@ -30,7 +31,7 @@
         </section>
 
         <section>
-            <h2><i>Skills</i></h2>
+            <h2>Skills</h2>
             <ul>
                 <li>HTML</li>
                 <li>C++</li>
@@ -40,9 +41,9 @@
         </section>
 
         <section>
-            <h2><i>Projects</i></h2>
+            <h2>Projects</h2>
             <article>
-                <h3><i>Personal Portfolio</i></h3>
+                <h3>Personal Portfolio</h3>
                 <p>A basic multi-page portfolio website created using only HTML.</p>
             </article>
         </section>
@@ -50,11 +51,9 @@
         <section>
             <h2>Learning Inspiration</h2>
 
-            <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/HcOc7P5BMi4"
-                title="YouTube video player"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HcOc7P5BMi4" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 allowfullscreen>
             </iframe>
 
