--- a/Personal Portfolio/about.html
+++ b/Personal Portfolio/about.html
@@ -19,16 +19,16 @@
     <main>
 
         <section>
-            <h2>Experience & Achievements</h2>
+            <h2><i>Experience & Achievements</i></h2>
             <p>
-                <b><i>I am a Computer Science student with a strong interest in programming,
+                <b>I am a Computer Science student with a strong interest in programming,
                 data structures, and software development. I enjoy building projects
-                that strengthen my fundamentals and logical thinking.</i></b>
+                that strengthen my fundamentals and logical thinking.</b>
             </p>
         </section>
 
         <section>
-            <h3>Strengths & Interests</h3>
+            <h3><i>Strengths & Interests</i></h3>
             <dl>
                 <dt>Problem Solving</dt>
                 <dd>Enjoy solving algorithmic challenges using C++.</dd>
