--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-        <h1>Kashish Srivastava</h1>
+        <h1><b><i>Kashish Srivastava</i></b></h1>
         <nav>
             <a href="index.html">Home</a>
             |
@@ -20,9 +20,9 @@
 
         <section>
             <p>
-                <i><b>Hi, I’m Kashish — a Computer Science student who loves learning new technologies
+                <b>Hi, I’m Kashish — a Computer Science student who loves learning new technologies
                 and building meaningful projects. I enjoy problem-solving and continuously
-                improving my technical skills.</b></i>
+                improving my technical skills.</b>
             </p>
         </section>
 
@@ -31,7 +31,7 @@
         </section>
 
         <section>
-            <h2>Skills</h2>
+            <h2><i>Skills</i></h2>
             <ul>
                 <li>HTML</li>
                 <li>C++</li>
@@ -41,7 +41,7 @@
         </section>
 
         <section>
-            <h2>Projects</h2>
+            <h2><i>Projects</i></h2>
             <article>
                 <h3>Personal Portfolio</h3>
                 <p>A basic multi-page portfolio website created using only HTML.</p>
@@ -49,7 +49,7 @@
         </section>
 
         <section>
-            <h2>Learning Inspiration</h2>
+            <h2><i>Learning Inspiration</i></h2>
 
             <iframe width="560" height="315" src="https://www.youtube.com/embed/HcOc7P5BMi4" 
                 title="YouTube video player" frameborder="0" 
